fix: changed return values of some classes for information hiding